<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="24dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:text="@string/nume_aplicatie"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnScanare"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#2196F3"
        android:text="@string/scanare_inv_st" />

    <Button
        android:id="@+id/btnImport"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:text="@string/importt" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#2196F3"
        android:text="@string/export"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSetari"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#2196F3"
        android:text="@string/optiuni"
        android:layout_marginTop="16dp" />
</LinearLayout>
