<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtDetaliiLot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scan_un_produs"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/inputDataExpirare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/noua_data_exp" />

    <EditText
        android:id="@+id/inputCantitate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cant_data"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSalveazaLot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2196F3"
        android:text="@string/save_int_stoc" />

    <EditText
        android:id="@+id/hiddenScanInput"
        android:layout_width="4dp"
        android:layout_height="2dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

</LinearLayout>
